--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="app"></div>
     <script src="src/index.js"></script>
   </body>
 </html>
