style: add title and icon

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>
+      Threejs-Learning
+    </title>
+    <link rel="shortcut icon" href="./favicon.ico"/>
   </head>
   <body>
     <div id="app" class="app"></div>
